--- a/match-report/src/components/Footer/Footer.css
+++ b/match-report/src/components/Footer/Footer.css
@@ -5,4 +5,5 @@
     justify-content: center;
     padding: 25px;
     z-index: 1000;
+    color: white;
 }
