--- a/match-report/src/components/RankCard/RankCard.css
+++ b/match-report/src/components/RankCard/RankCard.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-
+    color: white;
     height: 250px;
     width: 100%;
 }
@@ -23,6 +23,7 @@
     border-bottom: 12px solid rgb(127, 218, 105);
     padding-left: 10px;
     padding-right: 10px;
+    color: white;
 }
 
 #solo-duo {
