--- a/match-report/src/components/matchCard/MatchCard.css
+++ b/match-report/src/components/matchCard/MatchCard.css
@@ -10,6 +10,7 @@
     justify-content: space-around;
     box-shadow: 2.5px 2px 10px rgb(0, 0, 0);
     transition: 0.5s;
+    color: white;
 }
 
 #items {
